# kanastra

./: README
api/: .env  .gitignore  Dockerfile  README  alembic.ini  docker-compose.yml  pyproject.toml
api/alembic/versions/: 2024_06_07_1349-db62c33b2b45_document.py
api/app/: main.py  worker.py
api/app/api/models/: bill_status.py  document.py  document_status.py
api/app/api/repositories/: bill.py  document.py
api/app/api/routers/: document.py  events.py
api/app/api/services/: document.py
api/app/core/: db.py
api/app/core/domains/: tables.py
api/app/core/sql/: init.sql
api/app/notifiers/: __init__.py  email.py
api/app/processors/: __init__.py  bill.py  document.py
api/app/tests/: conftest.py  test_bill_processor.py  test_bill_repository.py  test_document_processor.py  test_document_repository.py  test_document_router.py  test_document_service.py  test_events_router.py  test_http.py  test_workers.py
ui/: README.md  bun.lockb  jest.config.ts  package-lock.json  package.json  vite.config.ts
ui/src/: main.tsx  providers.tsx
ui/src/__mocks__/: data.ts  handlers.ts
ui/src/components/: index.ts  main.test.tsx  main.tsx
ui/src/components/ui/: button.tsx  document-item.test.tsx  document-item.tsx  document-list.test.tsx  document-list.tsx  document-pagination.test.tsx  document-pagination.tsx  file-uploader.test.tsx  file-uploader.tsx  (+3 more)
ui/src/contexts/: document.test.tsx  document.tsx  pagination.test.tsx  pagination.tsx
ui/src/lib/: utils.ts
ui/src/models/: document.ts
ui/src/test/: setupTests.ts  utilts.tsx
ui/src/types/: document.ts
(+3 files in other folders)
