[tool.poetry]
name = "kanastra-api"
version = "0.1.0"
description = ""
authors = ["Athus Vieira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = {extras = ["redis"], version = "^5.4.0"}
fastapi = "^0.111.0"
alembic = "^1.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
psycopg = "^3.1.19"
python-multipart = "^0.0.9"
flower = "^2.0.1"
asgiref = "^3.8.1"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-env = "^1.1.3"
aiosqlite = "^0.20.0"
pytest-postgresql = "^6.0.0"
pytest-mock = "^3.14.0"
faker = "^25.8.0"
pytest-freezegun = "^0.4.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
ENVIRONMENT="development"
PYTHONUNBUFFERED=1
SQLALCHEMY_DB_URL="sqlite+aiosqlite:///:memory:"
CELERY_BROKER_URL="redis://"
CELERY_RESULT_BACKEND="redis://"
FLOWER_UNAUTHENTICATED_API=true